move jumpy header fix to hero__subtitle

--- a/shared/scss/_mixins.scss
+++ b/shared/scss/_mixins.scss
@@ -50,9 +50,6 @@
     text-transform: uppercase;
     letter-spacing: 0.1em;
     font-weight: bold;
-    height: 20px;
-    line-height: 21px;
-    text-align: center;
 }
 
 .uppercase {
